testing someting only, no file changes at all

--- a/C_Dr.Chuck/FahrFor.dSYM/Contents/Resources/Relocations/aarch64/FahrFor.yml
+++ b/C_Dr.Chuck/FahrFor.dSYM/Contents/Resources/Relocations/aarch64/FahrFor.yml
@@ -1,5 +1,5 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     '/Users/karlosiric/Documents/SublimeText Programming/C_Sublime_Portfolio/Dr.Chuck_C/FahrFor'
+binary-path:     '/Users/karlosiric/Documents/SublimeText Programming/C_Sublime_Portfolio/C_Dr.Chuck/FahrFor'
 relocations:     []
 ...
