--- a/maketest.dSYM/Contents/Resources/Relocations/aarch64/maketest.yml
+++ b/maketest.dSYM/Contents/Resources/Relocations/aarch64/maketest.yml
@@ -1,5 +1,5 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     '/Users/karlosiric/Documents/SublimeText Programming/C_Sublime_Portfolio/maketest'
+binary-path:     maketest
 relocations:     []
 ...
