--- a/randomNumbersTest.dSYM/Contents/Resources/Relocations/aarch64/randomNumbersTest.yml
+++ b/randomNumbersTest.dSYM/Contents/Resources/Relocations/aarch64/randomNumbersTest.yml
@@ -1,5 +1,5 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     randomNumbersTest
+binary-path:     '/Users/karlosiric/Documents/SublimeText Programming/C_Sublime_Portfolio/randomNumbersTest'
 relocations:     []
 ...
