--- a/C_Portfolio/switch.dSYM/Contents/Resources/Relocations/aarch64/switch.yml
+++ b/C_Portfolio/switch.dSYM/Contents/Resources/Relocations/aarch64/switch.yml
@@ -1,5 +1,5 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     switch
+binary-path:     '/Users/karlosiric/Documents/SublimeText Programming/C_Sublime_Portfolio/C_Portfolio/switch'
 relocations:     []
 ...
